[package]
name = "mokosh"
version = "0.1.0"
edition = "2021"
authors = ["HTM Rust Port Contributors"]
description = "A high-performance Rust implementation of Hierarchical Temporal Memory (HTM) algorithms"
license = "AGPL-3.0"
repository = "https://github.com/mokosh/mokosh"
documentation = "https://docs.rs/mokosh"
readme = "README.md"
keywords = ["htm", "machine-learning", "ai", "neural-network", "temporal-memory"]
categories = ["algorithms", "science"]
rust-version = "1.70"

[lib]
name = "mokosh"
path = "src/lib.rs"

[[bin]]
name = "perf_test"
path = "src/bin/perf_test.rs"

[features]
default = ["std"]
std = []
simd = []
serde = ["dep:serde", "dep:serde_json", "dep:bincode"]
rayon = ["dep:rayon"]

[dependencies]
# Core dependencies
thiserror = "1.0"
rand = { version = "0.8", features = ["std_rng"] }
rand_chacha = "0.3"

# Optional dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.3", optional = true }
rayon = { version = "1.8", optional = true }

# Performance
smallvec = { version = "1.11", features = ["serde"] }
ahash = { version = "0.8", features = ["serde"] }
bitvec = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
test-case = "3.3"

# SIMD benchmarks for all computational hot paths
[[bench]]
name = "simd_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
